namespace Assets.Scripts
{
    public class AnimationStrings
    {
        public static string isMoving = "isMoving";
        public static string isGrounded = "isGrounded";
        public static string yVelocity = "yVelocity";
        public static string jumpTrigger = "jump";
        public static string isOnWall = "isOnWall";
        public static string isOnCeiling = "isOnCeiling";
        public static string attackTrigger = "attack";
        public static string canMove = "canMove";
        public static string isAlive = "isAlive";
        public static string isEnrage = "isEnrage";
        public static string IdleTrigger = "Idle";
    }
}
